--- a/Styles/style.css
+++ b/Styles/style.css
@@ -86,7 +86,7 @@ color:#fff
 
     height: 100vh;
     width: 100vw;
-    background-image: linear-gradient(rgba(29,29,29,0.8),rgba(29,29,29,0.8)), url(/img/pão\ de\ fermentação\ -multigrãos.jpg); 
+    background-image: linear-gradient(rgba(29,29,29,0.8),rgba(29,29,29,0.8)), url(img/pão\ de\ fermentação\ -multigrãos.jpg); 
 background-position: center ;
 background-repeat: no-repeat;
 background-size: cover;
