--- a/Styles/style.css
+++ b/Styles/style.css
@@ -980,14 +980,14 @@ footer {
 
         width: 300px;
 
+
     }
 
     .img-padaria img {
 
         width: 70%;
-        margin: auto;
-        margin-bottom: 35px;
-        margin-top: 30px;
+       margin:10px 0px 20px 45px;
+        
 
 
 
